# PROG2400-Lectures

./: CMakeLists.txt  main
best_practices/: main.cpp  student_information.cpp  student_information.h
binary_search_tree/: main.cpp
command_line/: main.cpp
dynamic_array/: main.cpp
factorial/: main.cpp
filesystem/: main.cpp
linked_lists/: main.cpp
palindrome/: main.cpp
queue/: main.cpp
recursion/: main.cpp
sorting/: binary_search_tree.cpp  binary_search_tree.h  main.cpp  sorting.cpp  sorting.h
stack/: main.cpp
stringstream/: main.cpp
